      either create a new bookmark, or replace the old one with the current
      page.

    - ALT+Left mouse button and ALT+Right now advance one page, while ALT+Right
      mouse button/ALT+Left go back one page.

    - When on the last page, advancing to the next page will load files from
      the next sibling directory - holding CTRL is no longer necessary.

    - Settings in the Enhance dialog can now be remembered using the "Save"
      button.

    - Information shown in the status bar can now be enabled/disabled
      separately by right-clicking on the status bar and toggling the
      respective check box.

    - By pressing TAB, an OSD-like panel will be displayed, showing the current
      page and file.

    - MComix can now use Chardet (http://chardet.feedparser.org) for guessing
      filename encodings in archives, if installed. If file names are too
      short, the detection will still be hit-and-miss.

MComix 0.92
Release date: 27.05.2011

    - Fixed a bug that made MComix save preview thumbnails to disk
      even if this behaviour was disabled in the preferences window.

    - Fixed a bug in the the archive editor that prevented it from actually
      saving the modified archive on Win32.

    - Added limited support for password-protected ZIP and RAR archives.
      For ZIP archives, Python >= 2.6 is required. For RAR archives,
      only extraction with libunrar/unrar.dll is supported.

    - Added a combobox to the library dialog to enable sorting of books
      based on file name, full path, or file size.

    - If a library collection has sub-collections, the books from these
      sub-collections will be shown as well when the collection is opened.

    - The "Bookmarks" menu can be accessed via the normal menu bar again.
      "Clear bookmarks" has been removed in favour of using the "Edit
      bookmarks" dialog.
      (by Alan Horkan)

    - Several usability improvements were done to the Enhance, Edit and
      Library dialogs.